Fix null-containing LinkedList test expectation